Fixed Dark Mode and implemented page for candidates

--- a/frontend/src/components/candidates/candidates-grid.scss
+++ b/frontend/src/components/candidates/candidates-grid.scss
@@ -1,5 +1,5 @@
-.jobs-grid {
-    * {
-        color: var(--text-color1);
-    }
+.candidates-grid {
+  * {
+    color: var(--text-color1);
+  }
 }
